-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.3.0.0-incubating
-
Component/s: Core
-
Labels:None
I created a simple MapReduce map-only program (to simulate a Spark executor, like in the customer's environment) that uses JDBC through Postgresql Driver (like the customer is doing) and I executed the queries the customer is trying to execute. I can reproduce all the errors reported by customer.
2017-04-28 03:50:38.299276 IST,"gpadmin","gpadmin",p91745,th-609535712,"10.193.102.144","3228",2017-04-28 03:50:35 IST,156637,con4578,cmd36,seg-1,,,x156637,sx1,"ERROR","XX000","relcache reference e_event_1_0_102_1_prt_2 is not owned by resource owner TopTransaction (resowner.c:814)",,,,,,"ANALYZE mis_data_ig_account_details.e_event_1_0_102",0,,"resowner.c",814,"Stack trace:
1 0x8ce4a8 postgres errstart + 0x288
2 0x8d022b postgres elog_finish + 0xab
3 0x4ca654 postgres relation_close + 0x14
4 0x5e7508 postgres analyzeStmt + 0xd58
5 0x5e8b07 postgres analyzeStatement + 0x97
6 0x65c3bc postgres vacuum + 0x6c
7 0x7f61e2 postgres ProcessUtility + 0x542
8 0x7f1cae postgres <symbol not found> + 0x7f1cae
9 0x7f348e postgres <symbol not found> + 0x7f348e
10 0x7f51f5 postgres PortalRun + 0x465
11 0x7ee268 postgres PostgresMain + 0x1908
12 0x7a0560 postgres <symbol not found> + 0x7a0560
13 0x7a3329 postgres PostmasterMain + 0x759
14 0x4a5319 postgres main + 0x519
15 0x3a1661ed1d libc.so.6 __libc_start_main + 0xfd
16 0x4a5399 postgres <symbol not found> + 0x4a5399
"