HAWQ-1453. Fixed relation_close() error at analyzeStmt(): not owned by resource owner TopTransaction (resowner.c:814)

The relation opened at TopResourceOwner, while close at a new transaction resource owner.
So when we close these relations, we need to firstly switch back to the TopResourceOwner.